monospaced font in source editor

--- a/NinjaKit.safariextension/css/option_page.css
+++ b/NinjaKit.safariextension/css/option_page.css
@@ -410,3 +410,10 @@ fieldset select{
 fieldset.disabled #edit-wrap {
   opacity: 0.3;
 }
+
+div.line {
+	font-family:monospace;
+}
+textarea#edit-area {
+	font-family:monospace;
+}
